# ChewyNotification

./: .dockerignore  Dockerfile  INTEGRATION_GUIDE.md  PROJECT_STRUCTURE.md  README.md  deploy.sh  docker-compose.yml  nginx.conf  pyproject.toml
chewy_notification/: __init__.py  admin.py  apps.py  tasks.py  urls.py  utils.py
chewy_notification/migrations/: 0001_initial.py
chewy_notification/models/: __init__.py  base.py  channel.py  record.py  target.py  template.py
chewy_notification/serializers/: __init__.py  channel.py  record.py  target.py  template.py
chewy_notification/services/: __init__.py  bark_service.py  base_service.py  email_service.py  feishu_service.py  ntfy_service.py
chewy_notification/tests/: test_notifications.py
chewy_notification/views/: __init__.py  channel.py  quick_send.py  record.py  send.py  target.py  template.py
example_project/: README.md
example_project/example_project/: __init__.py  settings.py  urls.py
